--- a/src/visionlouisville/bower.json
+++ b/src/visionlouisville/bower.json
@@ -8,6 +8,7 @@
     "backbone": "~1.0.0",
     "handlebars.js": "~1.0.12",
     "backbone.marionette": "~1.0.3",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "swiper": "latest"
   }
 }
