--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,14 @@ djangorestframework
 
 
 # ==============================
+# External Services
+# ==============================
+
+twitter
+
+
+
+# ==============================
 # Routes and Templating
 # ==============================
 
