--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - cp src/visionlouisville/local_settings.py.template src/visionlouisville/local_settings.py
 
 before_script:
+  - psql -c 'create database visionlouisville;' -U postgres
   - "python src/manage.py runserver &"
   - curl https://gist.github.com/santiycr/5139565/raw/sauce_connect_setup.sh | bash
 
