Update urls for better sharing - changed all of the urls to assume pushstate - add django route to handle a vision id - add twitter and facebook meta tags to the template - handle pushstate urls for old browsers - hijack all urls to navigate through the router - sprinkle some magic for ie

--- a/src/visionlouisville/bower.json
+++ b/src/visionlouisville/bower.json
@@ -9,6 +9,7 @@
     "handlebars.js": "~1.0.12",
     "backbone.marionette": "~1.0.3",
     "moment": "~2.1.0",
-    "swiper": "latest"
+    "swiper": "latest",
+    "modernizr": "~2.6.2"
   }
 }
