Update the vision model to be related to a reply model - Add backbone-relational - Add a ReplyModel - Add a VisionModel, update the VisionCollection, make visions have many replies - Update the vision detail view to be a composite view to support a replies collection - Add supporting reply views

--- a/src/visionlouisville/bower.json
+++ b/src/visionlouisville/bower.json
@@ -11,6 +11,7 @@
     "moment": "~2.1.0",
     "swiper": "latest",
     "modernizr": "~2.6.2",
-    "Countable": "~2.0.0"
+    "Countable": "~2.0.0",
+    "backbone-relational": "~0.8.5"
   }
 }
