--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ twitter
 # Routes and Templating
 # ==============================
 
-django-jstemplate
+django-jstemplate>=1.3.1
 django-shorturls
 
 
