--- a/.dotcloud/config
+++ b/.dotcloud/config
@@ -1,6 +1,6 @@
 {
-    "push_branch": null, 
-    "application": "visionlou", 
-    "version": "0.9.5", 
-    "push_protocol": "rsync"
+    "push_branch": null,
+    "application": "devvizlou",
+    "version": "0.9.5",
+    "push_protocol": "git"
 }
