Add allowed_hosts to local_settings template

--- a/src/visionlouisville/local_settings.py.template
+++ b/src/visionlouisville/local_settings.py.template
@@ -12,6 +12,7 @@ DATABASES = {
 }
 
 SECRET_KEY = 'changemeloremipsumdolorsitametconsecteturadipisicingelit'
+ALLOWED_HOSTS = ['*']
 
 # For authenticating users with Twitter
 TWITTER_CONSUMER_KEY = ''
