--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,14 @@ Django
 
 
 # ==============================
+# Asynchronous proecssing
+# ==============================
+
+django-celery
+
+
+
+# ==============================
 # Persistence
 # ==============================
 
