Change the Travis notification settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,8 @@ before_script:
 
 script:
   - python src/manage.py test --with-coverage --cover-package=visionlouisville
+
+notifications:
+  email:
+    - dev@openplans.org
+    - mpoe@openplans.org
