--- a/src/visionlouisville/bower.json
+++ b/src/visionlouisville/bower.json
@@ -15,6 +15,7 @@
     "backbone-relational": "~0.8.5",
     "exif-js": "https://github.com/openplans/exif-js.git",
     "blueimp-load-image": "~1.9.1",
-    "blueimp-canvas-to-blob": "~2.0.7"
+    "blueimp-canvas-to-blob": "~2.0.7",
+    "spin.js": "~1.3.0"
   }
 }
