--- a/src/visionlouisville/bower.json
+++ b/src/visionlouisville/bower.json
@@ -16,6 +16,7 @@
     "exif-js": "https://github.com/openplans/exif-js.git",
     "blueimp-load-image": "~1.9.1",
     "blueimp-canvas-to-blob": "~2.0.7",
-    "spin.js": "~1.3.0"
+    "spin.js": "~1.3.0",
+    "hint.css": "~1.3.0"
   }
 }
