Fix category filtering in the Django view and update Ajax calls to filter by category - Fix category filtering to use category name - Freeze DRF at 2.3.7 to avoid html rendering bug - Filter vision collections by category - Fix category list links

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ django-social-auth
 # APIs
 # ==============================
 
-djangorestframework
+djangorestframework==2.3.7
 PIL  # For image verification
 
 
