Update bower/grunt configuration for heroku - Move bower/grunt config files to the root - Add postinstall to the package.json - Add .buildpacks and include the node buildpack - Rename components to bower_components - Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ local_settings.py
 .dotcloud
 
 # App
+node_modules
 src/hatch/node_modules/
-src/hatch/static/components/
+src/hatch/static/bower_components/
 src/hatch/static/js/*.min.js
 src/hatch/static/css/*.min.css
