--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
 }
