--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "blueimp-load-image": "~1.9.1",
     "blueimp-canvas-to-blob": "~2.0.7",
     "spin.js": "~1.3.0",
-    "hint.css": "~1.3.0"
+    "hint.css": "~1.3.0",
+    "swiper": "~2.4.1"
   }
 }
