--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-cssmin": "~0.6.1",
+    "tmp": "0.0.23",
     "bower": "1.2.x",
     "grunt-cli": "~0.1.11"
   },
