--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "moment": "~2.1.0",
     "modernizr": "~2.6.2",
     "Countable": "~2.0.0",
-    "backbone-relational": "~0.8.5",
+    "backbone-relational": "<0.8.8",
     "exif-js": "https://github.com/openplans/exif-js.git",
     "blueimp-load-image": "~1.9.1",
     "blueimp-canvas-to-blob": "~2.0.7",
